# setu-nonebot2

./: .env  README.md  bot.py  pyproject.toml  requirements.txt  setup.py
nonebot-plugin-setu/: __init__.py
nonebot-plugin-setu/database/: freqLimit.py
setu_nonebot/: setu.py
setu_nonebot/APIS/: lolicon.py  yuban.py
setu_nonebot/database/: getConfig.py
src/plugins/nonebot-plugin-setu/: __init__.py  config.py  setu.py  utils.py
src/plugins/nonebot-plugin-setu/APIS/: _proxies.py  lolicon.py  pixiv.py  yuban.py
src/plugins/nonebot-plugin-setu/database/: freqLimit.py  getConfig.py  ifSent.py
